Installation
***********************************************
See INSTALL file for details

Changelog
***********************************************

Version 0.113
 Fixed:
  - Added *.xpm filter to icon import patten;

Version 0.112-r1
 Fixed:
  - Fixed compilation with Qt-4.4.X;
  - Removed QDir::Files from Directory selection dialogs;
  - Fixed compilation warning for registry.h;
  - Fixed warnings ignoring return value of 'int system(const char*)' on 1666 and 1647 lines;

Version 0.112
 core:
  New:
  - Added Sidebar Urls for Run and IconSettings file dialogs;
  - Wine Dlls path autodetections; (If not work on your system -- plz mail to me ;) )
  - You can disable icotools support in q4wine by adding -DWITH_ICOTOOLS=OFF to cmake;
  - Winetools support is disabled by default. You can enable it by adding -DWITH_WINETOOLS=ON to cmake args;
  - All developer stuff is disabled by default. You can enable it by adding -DWITH_DEVELOP_STUFF=ON to cmake args;
  - New database class;
  - kdesu\gksu support;
  Fixed:
  - Fixed import\export prefix functions;
  - Many small fixes;
  - Updated STDERR message catch function;
  - Added FreeBSD port patches by Dmitry Marakasov aka amdmi3;
  - Fixed readonly text field on prefix create;
  - Fixed q4wine.desktop GENERIC names;
  - Fixed IconSettings path detections (ProgramPath\WorkDirPath e.t.c.);
  - Fixed .exe adding to IconName on Prgoram file select;
  - Run, AppSettings, ImageManager, Wizard and IconSettings dialogs now are modal dialogs;
  - Fixed LC_ALL and LS_MESSAGES locale detection;
  - Winetriks executable now puts into $HOME/.config/q4inwe/ directory;
  - No sudo now needed for Winetriks download and install;

Version 0.111
 core:
  New:
  - New q4wine icons with different sizes;
  - Updated q4wine.desktop;
  - Make install now install q4wine.desktop and icons;
  - Added basic shortcuts;
  - q4wine now save and restore size and position of main window;
 core:
  Fixed:
  - Fixed icoutils icon export bugs;